--- a/src/app/modulos/administracion/productos/crear-producto/crear-producto.component.html
+++ b/src/app/modulos/administracion/productos/crear-producto/crear-producto.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <h3 class="center-align" >Crear Productos
+    <h3 class="center-align" >Crear Productos </h3>
     <article class="col s6 offset-s3">
         <form [formGroup]="fgValidador" (ngSubmit)="GuardarProducto()" method="POST" action="formulario-contacto.php">
             <div class="input-field">
@@ -23,5 +23,5 @@
             </p>
         </form>
     </article>
-    </h3>
+   
 </div>
